--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -5,7 +5,7 @@ on: ['push','pull_request']
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ['ubuntu-latest','Microsoft Windows',MacOS]
     strategy:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
