--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -5,7 +5,7 @@ on: ['push','pull_request']
 jobs:
   build:
 
-    runs-on: ['ubuntu-latest','windows-latest','macos-latest']
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
