--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -28,11 +28,9 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          pytest --cov=PythonAvance --cov-report=xml --cov-report=html
+          pytest --cov=PythonAvance --cov-report=xml --cov-report=html | tee pytest-coverage.txt
       - name: Pytest Coverage Comment
-        uses: dawidd6/action-pytest-cov@v2
+        uses: MishaKav/pytest-coverage-comment@main
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          path: .
-          fail_under: 50
-          comment: true
+          pytest-coverage-path: ./pytest-coverage.txt
+          junitxml-path: ./pytest.xml
