--- a/.github/workflows/pull_request_python.yml
+++ b/.github/workflows/pull_request_python.yml
@@ -1,13 +1,13 @@
 name: Python package
 
-on: 'push'
+on: 'pull_request'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.7"]
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
       - uses: actions/checkout@v3
@@ -24,8 +24,7 @@ jobs:
         run: |
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
           pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=PythonAvance tests/ | tee pytest-coverage.txt
