--- a/.github/workflows/push_python.yml
+++ b/.github/workflows/push_python.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.7"]
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
       - uses: actions/checkout@v3
@@ -18,14 +18,16 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest pytest-cov
+          pip install flake8 pytest pytest-cov black
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Format with black
+        run: |
+          black --check --diff PythonAvance
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          flake8 PythonAvance --count --select=E9,F63,F7,F82 --show-source --statistics 
+          flake8 PythonAvance --count --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
           pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=PythonAvance tests/ | tee pytest-coverage.txt
