--- a/.github/workflows/pull_request_python.yml
+++ b/.github/workflows/pull_request_python.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Test with pytest
         run: |
           cd tests
-          pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=PythonAvance tests/ | tee pytest-coverage.txt
+          pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=PythonAvance tests/ --fail-under=100 | tee pytest-coverage.txt
           cd ../
       - name: Pytest Coverage Comment
         uses: MishaKav/pytest-coverage-comment@main
