--- a/.github/workflows/pull_request_python.yml
+++ b/.github/workflows/pull_request_python.yml
@@ -57,7 +57,7 @@ jobs:
           run: |
             python -m pip install --upgrade pip
             pip install flake8 pytest pytest-cov black
-            if ([ -f requirements.txt ]); then pip install -r requirements.txt; fi
+            pip install -r requirements.txt
         - name: Format with black
           run: |
             black PythonAvance
