--- a/.github/workflows/pull_request_python.yml
+++ b/.github/workflows/pull_request_python.yml
@@ -32,7 +32,8 @@ jobs:
         - name: Test with pytest
           run: |
             cd tests
-            pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=PythonAvance tests/ --fail-under=100 | tee pytest-coverage.txt
+            pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=PythonAvance tests/ | tee pytest-coverage.txt
+            coverage report --cov-fail-under=100
             cd ../
         - name: Pytest Coverage Comment
           uses: MishaKav/pytest-coverage-comment@main
@@ -69,7 +70,8 @@ jobs:
         - name: Test with pytest
           run: |
             cd tests
-            pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=PythonAvance tests/ --fail-under=100 | tee pytest-coverage.txt
+            pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=PythonAvance tests/ | tee pytest-coverage.txt
+            coverage report --cov-fail-under=100
             cd ../
         - name: Pytest Coverage Comment
           uses: MishaKav/pytest-coverage-comment@main
@@ -106,7 +108,8 @@ jobs:
         - name: Test with pytest
           run: |
             cd tests
-            pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=PythonAvance tests/ --fail-under=100 | tee pytest-coverage.txt
+            pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=PythonAvance tests/ | tee pytest-coverage.txt
+            coverage report --cov-fail-under=100
             cd ../
         - name: Pytest Coverage Comment
           uses: MishaKav/pytest-coverage-comment@main
