--- a/.github/workflows/pull_request_python.yml
+++ b/.github/workflows/pull_request_python.yml
@@ -19,7 +19,7 @@ jobs:
         - name: Install dependencies
           run: |
             python -m pip install --upgrade pip
-            pip install flake8 pytest pytest-cov black
+            pip install flake8 pytest pytest-cov black mypy
             if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         - name: Format with black
           run: |
@@ -29,6 +29,7 @@ jobs:
             # stop the build if there are Python syntax errors or undefined names
             flake8 PythonAvance --count --select=E9,F63,F7,F82 --show-source --statistics 
             flake8 PythonAvance --count --max-complexity=10 --max-line-length=127 --statistics
+            mypy .\PythonAvance\ --disallow-untyped-defs
         - name: Test with pytest
           run: |
             cd tests
@@ -56,7 +57,7 @@ jobs:
         - name: Install dependencies
           run: |
             python -m pip install --upgrade pip
-            pip install flake8 pytest pytest-cov black
+            pip install flake8 pytest pytest-cov black mypy
             if (Test-Path requirements.txt) { pip install -r requirements.txt }
         - name: Format with black
           run: |
@@ -66,6 +67,7 @@ jobs:
             # stop the build if there are Python syntax errors or undefined names
             flake8 PythonAvance --count --select=E9,F63,F7,F82 --show-source --statistics 
             flake8 PythonAvance --count --max-complexity=10 --max-line-length=127 --statistics
+            mypy .\PythonAvance\ --disallow-untyped-defs
         - name: Test with pytest
           run: |
             cd tests
@@ -88,7 +90,7 @@ jobs:
         - name: Install dependencies
           run: |
             python -m pip install --upgrade pip
-            pip install flake8 pytest pytest-cov black
+            pip install flake8 pytest pytest-cov black mypy
             if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         - name: Format with black
           run: |
@@ -98,6 +100,7 @@ jobs:
             # stop the build if there are Python syntax errors or undefined names
             flake8 PythonAvance --count --select=E9,F63,F7,F82 --show-source --statistics 
             flake8 PythonAvance --count --max-complexity=10 --max-line-length=127 --statistics
+            mypy .\PythonAvance\ --disallow-untyped-defs
         - name: Test with pytest
           run: |
             cd tests
