--- a/.github/workflows/pull_request_python.yml
+++ b/.github/workflows/pull_request_python.yml
@@ -29,7 +29,7 @@ jobs:
             # stop the build if there are Python syntax errors or undefined names
             flake8 PythonAvance --count --select=E9,F63,F7,F82 --show-source --statistics 
             flake8 PythonAvance --count --max-complexity=10 --max-line-length=127 --statistics
-            mypy .\PythonAvance\ --disallow-untyped-defs
+            mypy PythonAvance --disallow-untyped-defs
         - name: Test with pytest
           run: |
             cd tests
@@ -100,7 +100,7 @@ jobs:
             # stop the build if there are Python syntax errors or undefined names
             flake8 PythonAvance --count --select=E9,F63,F7,F82 --show-source --statistics 
             flake8 PythonAvance --count --max-complexity=10 --max-line-length=127 --statistics
-            mypy .\PythonAvance\ --disallow-untyped-defs
+            mypy PythonAvance --disallow-untyped-defs
         - name: Test with pytest
           run: |
             cd tests
